--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - run:
           name: Ensure backend infrastructure exist
           command: |
-            aws cloudformation deploy --template-file template.yml --stack-name my-stack
+            aws cloudformation create-stack --stack-name my-stack --region us-west-2 --template-body file://template.yml
 workflows:
   my_workflow:
     jobs:
