--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,14 @@ orbs:
   welcome: circleci/welcome-orb@0.4.1
 # Orchestrate or schedule a set of jobs
 
+commands:
+  destroy_environment:
+    steps:
+      - run:
+          name: Destroy environment
+          command: |
+            aws cloudformation delete-stack --stack-name prod-${CIRCLE_WORKFLOW_ID}
+
 jobs:
   create_infrastructure:
     docker:
@@ -17,9 +25,13 @@ jobs:
           command: |
             aws cloudformation deploy \
               --template-file template.yml \
-              --stack-name my-stack
+              --stack-name prod-${CIRCLE_WORKFLOW_ID}
+      - run: return 1
+      - destroy_environment
+        when: on_fail
+                
+
 workflows:
   my_workflow:
     jobs:
-      - create_infrastructure
-      
+      - create_infrastructure      
