--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,8 @@ commands:
           name: Destroy environment
           command: |
             aws cloudformation delete-stack --stack-name prod-${CIRCLE_WORKFLOW_ID}
+          when: on_fail  
+            
 
 jobs:
   create_infrastructure:
@@ -27,8 +29,8 @@ jobs:
               --template-file template.yml \
               --stack-name prod-${CIRCLE_WORKFLOW_ID}
       - run: return 1
-      - destroy_environment:
-          when: on_fail
+      - destroy_environment
+        
                 
 
 workflows:
